Changelog for mk-query-advisor:

2010-12-11: version 1.0.3

   * Fixed false-positive ARG.001 matches (issue 1163).
   * Added rule CLA.007 to detect different ORDER BY directions (issue 1158).

2010-11-08: version 1.0.2

   * Added rule CLA.006 to detect mixed table GROUP/ORDER BY (issue 1137).

2010-09-11: version 1.0.1

   * Add rules JOI.003 and JOI.004 (issue 950).
   * Added --[no]show-create-table (issue 950).
   * Added --database (issue 950).

2010-08-01: version 1.0.0

   * Initial release.