@@ -5076,7 +5076,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# TableParser package 6770
+# TableParser package 7156
 # This package is a copy without comments from the original.  The original
 # with comments and its test file can be found in the SVN repository at,
 #   trunk/common/TableParser.pm
@@ -5159,6 +5159,8 @@ sub parse {
 
    my ($keys, $clustered_key) = $self->get_keys($ddl, $opts, \%is_nullable);
 
+   my ($charset) = $ddl =~ m/DEFAULT CHARSET=(\w+)/;
+
    return {
       name           => $name,
       cols           => \@cols,
@@ -5174,6 +5176,7 @@ sub parse {
       is_numeric     => \%is_numeric,
       engine         => $engine,
       type_for       => \%type_for,
+      charset        => $charset,
    };
 }
 
@@ -5468,6 +5471,356 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
+# ReportFormatter package 7128
+# This package is a copy without comments from the original.  The original
+# with comments and its test file can be found in the SVN repository at,
+#   trunk/common/ReportFormatter.pm
+#   trunk/common/t/ReportFormatter.t
+# See http://code.google.com/p/maatkit/wiki/Developers for more information.
+# ###########################################################################
+package ReportFormatter;
+
+
+use strict;
+use warnings FATAL => 'all';
+use English qw(-no_match_vars);
+use List::Util qw(min max);
+use POSIX qw(ceil);
+
+eval { require Term::ReadKey };
+my $have_term = $EVAL_ERROR ? 0 : 1;
+
+use constant MKDEBUG => $ENV{MKDEBUG} || 0;
+
+sub new {
+   my ( $class, %args ) = @_;
+   my @required_args = qw();
+   foreach my $arg ( @required_args ) {
+      die "I need a $arg argument" unless $args{$arg};
+   }
+   my $self = {
+      underline_header     => 1,
+      line_prefix          => '# ',
+      line_width           => 78,
+      column_spacing       => ' ',
+      extend_right         => 0,
+      truncate_line_mark   => '...',
+      column_errors        => 'warn',
+      truncate_header_side => 'left',
+      strip_whitespace     => 1,
+      %args,              # args above can be overriden, args below cannot
+      n_cols              => 0,
+   };
+
+   if ( ($self->{line_width} || '') eq 'auto' ) {
+      die "Cannot auto-detect line width because the Term::ReadKey module "
+         . "is not installed" unless $have_term;
+      ($self->{line_width}) = GetTerminalSize();
+   }
+   MKDEBUG && _d('Line width:', $self->{line_width});
+
+   return bless $self, $class;
+}
+
+sub set_title {
+   my ( $self, $title ) = @_;
+   $self->{title} = $title;
+   return;
+}
+
+sub set_columns {
+   my ( $self, @cols ) = @_;
+   my $min_hdr_wid = 0;  # check that header fits on line
+   my $used_width  = 0;
+   my @auto_width_cols;
+
+   for my $i ( 0..$#cols ) {
+      my $col      = $cols[$i];
+      my $col_name = $col->{name};
+      my $col_len  = length $col_name;
+      die "Column does not have a name" unless defined $col_name;
+
+      if ( $col->{width} ) {
+         $col->{width_pct} = ceil(($col->{width} * 100) / $self->{line_width});
+         MKDEBUG && _d('col:', $col_name, 'width:', $col->{width}, 'chars =',
+            $col->{width_pct}, '%');
+      }
+
+      if ( $col->{width_pct} ) {
+         $used_width += $col->{width_pct};
+      }
+      else {
+         MKDEBUG && _d('Auto width col:', $col_name);
+         $col->{auto_width} = 1;
+         push @auto_width_cols, $i;
+      }
+
+      $col->{truncate}        = 1 unless defined $col->{truncate};
+      $col->{truncate_mark}   = '...' unless defined $col->{truncate_mark};
+      $col->{truncate_side} ||= 'right';
+      $col->{undef_value}     = '' unless defined $col->{undef_value};
+
+      $col->{min_val} = 0;
+      $col->{max_val} = 0;
+
+      $min_hdr_wid        += $col_len;
+      $col->{header_width} = $col_len;
+
+      $col->{right_most} = 1 if $i == $#cols;
+
+      push @{$self->{cols}}, $col;
+   }
+
+   $self->{n_cols} = scalar @cols;
+
+   if ( ($used_width || 0) > 100 ) {
+      die "Total width_pct for all columns is >100%";
+   }
+
+   if ( @auto_width_cols ) {
+      my $wid_per_col = int((100 - $used_width) / scalar @auto_width_cols);
+      MKDEBUG && _d('Line width left:', (100-$used_width), '%;',
+         'each auto width col:', $wid_per_col, '%');
+      map { $self->{cols}->[$_]->{width_pct} = $wid_per_col } @auto_width_cols;
+   }
+
+   $min_hdr_wid += ($self->{n_cols} - 1) * length $self->{column_spacing};
+   MKDEBUG && _d('min header width:', $min_hdr_wid);
+   if ( $min_hdr_wid > $self->{line_width} ) {
+      MKDEBUG && _d('Will truncate headers because min header width',
+         $min_hdr_wid, '> line width', $self->{line_width});
+      $self->{truncate_headers} = 1;
+   }
+
+   return;
+}
+
+sub add_line {
+   my ( $self, @vals ) = @_;
+   my $n_vals = scalar @vals;
+   if ( $n_vals != $self->{n_cols} ) {
+      $self->_column_error("Number of values $n_vals does not match "
+         . "number of columns $self->{n_cols}");
+   }
+   for my $i ( 0..($n_vals-1) ) {
+      my $col   = $self->{cols}->[$i];
+      my $val   = defined $vals[$i] ? $vals[$i] : $col->{undef_value};
+      if ( $self->{strip_whitespace} ) {
+         $val =~ s/^\s+//g;
+         $val =~ s/\s+$//;
+         $vals[$i] = $val;
+      }
+      my $width = length $val;
+      $col->{min_val} = min($width, ($col->{min_val} || $width));
+      $col->{max_val} = max($width, ($col->{max_val} || $width));
+   }
+   push @{$self->{lines}}, \@vals;
+   return;
+}
+
+sub get_report {
+   my ( $self ) = @_;
+
+   $self->_calculate_column_widths();
+   $self->_truncate_headers() if $self->{truncate_headers};
+   $self->_truncate_line_values();
+
+   my @col_fmts = $self->_make_column_formats();
+   my $fmt      = ($self->{line_prefix} || '')
+                . join($self->{column_spacing}, @col_fmts);
+   MKDEBUG && _d('Format:', $fmt);
+
+   (my $hdr_fmt = $fmt) =~ s/%([^-])/%-$1/g;
+
+   my @lines;
+   push @lines, sprintf "$self->{line_prefix}$self->{title}" if $self->{title};
+   push @lines, $self->_truncate_line(
+         sprintf($hdr_fmt, map { $_->{name} } @{$self->{cols}}),
+         strip => 1,
+         mark  => '',
+   );
+
+   if ( $self->{underline_header} ) {
+      my @underlines = map { '=' x $_->{print_width} } @{$self->{cols}};
+      push @lines, $self->_truncate_line(
+         sprintf($fmt, @underlines),
+         mark  => '',
+      );
+   }
+
+   push @lines, map {
+      my $vals = $_;
+      my $i    = 0;
+      my @vals = map {
+            defined $_ ? $_ : $self->{cols}->[$i++]->{undef_value}
+      } @$vals;
+      my $line = sprintf($fmt, @vals);
+      if ( $self->{extend_right} ) {
+         $line;
+      }
+      else {
+         $self->_truncate_line($line);
+      }
+   } @{$self->{lines}};
+
+   return join("\n", @lines) . "\n";
+}
+
+sub truncate_value {
+   my ( $self, $col, $val, $width, $side ) = @_;
+   return $val if length $val <= $width;
+   return $val if $col->{right_most} && $self->{extend_right};
+   $side  ||= $col->{truncate_side};
+   my $mark = $col->{truncate_mark};
+   if ( $side eq 'right' ) {
+      $val  = substr($val, 0, $width - length $mark);
+      $val .= $mark;
+   }
+   elsif ( $side eq 'left') {
+      $val = $mark . substr($val, -1 * $width + length $mark);
+   }
+   else {
+      MKDEBUG && _d("I don't know how to", $side, "truncate values");
+   }
+   return $val;
+}
+
+sub _calculate_column_widths {
+   my ( $self ) = @_;
+
+   my $extra_space = 0;
+   foreach my $col ( @{$self->{cols}} ) {
+      my $print_width = int($self->{line_width} * ($col->{width_pct} / 100));
+
+      MKDEBUG && _d('col:', $col->{name}, 'width pct:', $col->{width_pct},
+         'char width:', $print_width,
+         'min val:', $col->{min_val}, 'max val:', $col->{max_val});
+
+      if ( $col->{auto_width} ) {
+         if ( $col->{min_val} && $print_width < $col->{min_val} ) {
+            MKDEBUG && _d('Increased to min val width:', $col->{min_val});
+            $print_width = $col->{min_val};
+         }
+         elsif ( $col->{max_val} &&  $print_width > $col->{max_val} ) {
+            MKDEBUG && _d('Reduced to max val width:', $col->{max_val});
+            $extra_space += $print_width - $col->{max_val};
+            $print_width  = $col->{max_val};
+         }
+      }
+
+      $col->{print_width} = $print_width;
+      MKDEBUG && _d('print width:', $col->{print_width});
+   }
+
+   MKDEBUG && _d('Extra space:', $extra_space);
+   while ( $extra_space-- ) {
+      foreach my $col ( @{$self->{cols}} ) {
+         if (    $col->{auto_width}
+              && (    $col->{print_width} < $col->{max_val}
+                   || $col->{print_width} < $col->{header_width})
+         ) {
+            $col->{print_width}++;
+         }
+      }
+   }
+
+   return;
+}
+
+sub _truncate_headers {
+   my ( $self, $col ) = @_;
+   my $side = $self->{truncate_header_side};
+   foreach my $col ( @{$self->{cols}} ) {
+      my $col_name    = $col->{name};
+      my $print_width = $col->{print_width};
+      next if length $col_name <= $print_width;
+      $col->{name}  = $self->truncate_value($col, $col_name, $print_width, $side);
+      MKDEBUG && _d('Truncated hdr', $col_name, 'to', $col->{name},
+         'max width:', $print_width);
+   }
+   return;
+}
+
+sub _truncate_line_values {
+   my ( $self ) = @_;
+   my $n_vals = $self->{n_cols} - 1;
+   foreach my $vals ( @{$self->{lines}} ) {
+      for my $i ( 0..$n_vals ) {
+         my $col   = $self->{cols}->[$i];
+         my $val   = defined $vals->[$i] ? $vals->[$i] : $col->{undef_value};
+         my $width = length $val;
+
+         if ( $col->{print_width} && $width > $col->{print_width} ) {
+            if ( !$col->{truncate} ) {
+               $self->_column_error("Value '$val' is too wide for column "
+                  . $col->{name});
+            }
+
+            my $callback  = $self->{truncate_callback};
+            my $print_width = $col->{print_width};
+            $val = $callback ? $callback->($col, $val, $print_width)
+                 :             $self->truncate_value($col, $val, $print_width);
+            MKDEBUG && _d('Truncated val', $vals->[$i], 'to', $val,
+               '; max width:', $print_width);
+            $vals->[$i] = $val;
+         }
+      }
+   }
+   return;
+}
+
+sub _make_column_formats {
+   my ( $self ) = @_;
+   my @col_fmts;
+   my $n_cols = $self->{n_cols} - 1;
+   for my $i ( 0..$n_cols ) {
+      my $col = $self->{cols}->[$i];
+
+      my $width = $col->{right_most} && !$col->{right_justify} ? ''
+                : $col->{print_width};
+
+      my $col_fmt  = '%' . ($col->{right_justify} ? '' : '-') . $width . 's';
+      push @col_fmts, $col_fmt;
+   }
+   return @col_fmts;
+}
+
+sub _truncate_line {
+   my ( $self, $line, %args ) = @_;
+   my $mark = defined $args{mark} ? $args{mark} : $self->{truncate_line_mark};
+   if ( $line ) {
+      $line =~ s/\s+$// if $args{strip};
+      my $len  = length($line);
+      if ( $len > $self->{line_width} ) {
+         $line  = substr($line, 0, $self->{line_width} - length $mark);
+         $line .= $mark if $mark;
+      }
+   }
+   return $line;
+}
+
+sub _column_error {
+   my ( $self, $err ) = @_;
+   my $msg = "Column error: $err";
+   $self->{column_errors} eq 'die' ? die $msg : warn $msg;
+   return;
+}
+
+sub _d {
+   my ($package, undef, $line) = caller 0;
+   @_ = map { (my $temp = $_) =~ s/\n/\n# /g; $temp; }
+        map { defined $_ ? $_ : 'undef' }
+        @_;
+   print STDERR "# $package:$line $PID ", join(' ', @_), "\n";
+}
+
+1;
+
+# ###########################################################################
+# End ReportFormatter package
+# ###########################################################################
+
+# ###########################################################################
 # This is a combination of modules and programs in one -- a runnable module.
 # http://www.perl.com/pub/a/2006/07/13/lightning-articles.html?page=last
 # Or, look it up in the Camel book on pages 642 and 643 in the 3rd edition.
@@ -5503,6 +5856,7 @@ sub main {
 
    my %seen_id;           # already printed rule info (advice)
    my %seen_fingerprint;  # already seen queries
+   my %advice_queue;      # queued up advice for --group-by
 
    # ########################################################################
    # Get configuration information.
@@ -5515,12 +5869,17 @@ sub main {
    $dp->prop('set-vars', $o->get('set-vars'));
 
    my $review_dsn = $o->get('review');
+   my $groupby    = lc $o->get('group-by');
 
    if ( !$o->get('help') ) {
       if ( $review_dsn
            && (!defined $review_dsn->{D} || !defined $review_dsn->{t}) ) {
          $o->save_error('The --review DSN requires a D (database) and t'
             . ' (table) part specifying the query review table');
+      }
+      if ( $groupby !~ m/rule_id|query_id|none/ ) {
+         $o->save_error("Invalid --group-by value.  Valid values are: "
+            . "rule_id, query_id, none");
       }
    }
 
@@ -5688,6 +6047,7 @@ sub main {
          MKDEBUG && _d("Event skipped because of --sample");
          return;
       }
+      $event->{query_id} = make_checksum($event->{fingerprint});
       return $event;
    };
 
@@ -5778,20 +6138,34 @@ sub main {
    };
 
    # Print info (advice) about each rule that matched this query.
-   push @pipeline, sub {
-      my ( %args ) = @_;
-      MKDEBUG && _d('callback: print advice');
-      my $event = $args{event};
-      print_advice(
-         %args,
-         seen_id       => \%seen_id,
-         verbose       => $o->get('verbose'),
-         print_all     => $o->get('print-all'),
-         report_format => $o->get('report-format'),
-         Advisor       => $adv,
-      );
-      return $event;
-   };
+   if ( $groupby eq 'none' ) {
+      push @pipeline, sub {
+         my ( %args ) = @_;
+         MKDEBUG && _d('callback: print advice');
+         my $event = $args{event};
+         print_advice(
+            %args,
+            seen_id       => \%seen_id,
+            verbose       => $o->get('verbose'),
+            print_all     => $o->get('print-all'),
+            report_format => $o->get('report-format'),
+            Advisor       => $adv,
+         );
+         return $event;
+      };
+   }
+   else {   
+      push @pipeline, sub {
+         my ( %args ) = @_;
+         MKDEBUG && _d('callback: queue advice for group-by', $groupby);
+         queue_advice(
+            advice_queue => \%advice_queue,
+            group_by     => $groupby,
+            event        => $args{event},
+         );
+         return $args{event};
+      };
+   }
 
    # ##########################################################################
    # Get ready to do the main work.
@@ -5878,6 +6252,19 @@ sub main {
    $dbh->disconnect() if $dbh;
    $review_dbh->disconnect() if $review_dbh;
 
+   # ########################################################################
+   # Aggregate and report items for group-by reports
+   # ########################################################################
+   if ( $groupby ne 'none' ) {
+      print_grouped_report(
+         advice_queue  => \%advice_queue,
+         group_by      => $groupby,
+         Advisor       => $adv,
+         verbose       => $o->get('verbose'),
+         report_format => $o->get('report-format'),
+      )
+   }
+
    return 0;
 }
 
@@ -5901,7 +6288,7 @@ sub print_advice {
    return unless $n_advice || $args{print_all};
 
    # Header
-   my $id = make_checksum($event->{fingerprint});
+   my $id = $event->{query_id} || "";
    print "\n# Query ID 0x$id at byte " . ($event->{pos_in_log} || 0) . "\n";
 
    # New check IDs and their descriptions
@@ -5939,6 +6326,56 @@ sub print_advice {
 
    # The query
    print "$event->{arg}\n";
+
+   return;
+}
+
+sub queue_advice {
+   my ( %args ) = @_;
+   my @required_args = qw(advice_queue group_by event);
+   foreach my $arg ( @required_args ) {
+      die "I need a $arg argument" unless $args{$arg};
+   }
+   my ($advice_queue, $groupby, $event) = @args{@required_args};
+
+   my $advice = $event->{advice};
+   return unless scalar @$advice;
+
+   my $query_id = $event->{query_id};
+   if ( !$query_id ) {
+      warn "Event does not have a query ID";  # shouldn't happen
+      return;
+   }
+
+   if ( $groupby eq 'query_id' ) {
+      map { $advice_queue->{$query_id}->{$_}++ } @$advice;
+   }
+   elsif ( $groupby eq 'rule_id' ) {
+      map { $advice_queue->{$_}->{$query_id}++ } @$advice;
+   }
+   else {
+      die "I don't know how to group items by $groupby";
+   }
+
+   return;
+}
+
+sub print_grouped_report {
+   my ( %args ) = @_;
+   my @required_args = qw(advice_queue group_by Advisor);
+   foreach my $arg ( @required_args ) {
+      die "I need a $arg argument" unless $args{$arg};
+   }
+   my ($advice_queue, $groupby, $adv) = @args{@required_args};
+   my $verbose = $args{verbose} || 0;
+
+   foreach my $groupby_attrib ( keys %$advice_queue ) {
+      print $groupby_attrib;
+      foreach my $groupby_value ( keys %{$advice_queue->{$groupby_attrib}} ) {
+         print " " . ($groupby ne 'query_id' ? "0x" : "") . $groupby_value;
+      }
+      print "\n\n";
+   }
 
    return;
 }
@@ -6320,6 +6757,18 @@ short form: -F; type: string
 Only read mysql options from the given file.  You must give an absolute
 pathname.
 
+=item --group-by
+
+type: string; default: rule_id
+
+Group items in the report by this attribute.  Possible attributes are:
+
+   ATTRIBUTE GROUPS
+   ========= ==========================================================
+   rule_id   Items matching the same rule ID
+   query_id  Queries with the same ID (the same fingerprint)
+   none      No grouping, report each query and its advice individually
+
 =item --help
 
 Show help and exit.
@@ -6363,7 +6812,8 @@ Port number to use for connection.
 
 =item --print-all
 
-Print all queries, even those that do not match any rules.
+Print all queries, even those that do not match any rules.  This only
+works for L<"--group-by"> C<none>.
 
 =item --query
 
