@@ -1,5 +1,7 @@
 Changelog for mk-query-advisor:
 
+   * Added --group-by and changed default to rule_id (issue 1156).
+
 2010-12-11: version 1.0.3
 
    * Fixed false-positive ARG.001 matches (issue 1163).
